test/tests/compiler/8_loops/invalid_parse/extra_credit/plx1_otherwise_no_block_1.plx
pub fn main(none) i32 {
    match 3 {
        otherwise return 0
    }
}
